updates
- account settings
- notes
- name beside logo
- overview shortcuts
- profile picture handling

need to debug:
- direct signup (no email found when entering dashboard unless logging in again)
- logout button in notes
- logging in twice with other platforms
- unshared notes
- basta daghan pa